# Cam_IMU_Calib_for_Vehicles

./: CMakeLists.txt  README.md  config.yaml
camIMUCalib/src/: main_node.cpp
camOdoCalib/calib_timeOffset/: IccSensors.py
camOdoCalib/include/: ErrorFunction.h  data_selection.h  g2otypes.h  integration_base.h  solveQyx.h  solver.h  tool.h  utils.h
camOdoCalib/include/csm/: math_utils_gsl.h
camOdoCalib/include/egsl/: egsl.h
camOdoCalib/src/: g2otypes.cpp  main_node.cpp  solveQyx.cpp  solver.cpp  utils.cpp
camOdoCalib/src/calc_cam_pose/: calcCamPose.cpp  calcCamPose.h
camOdoCalib/src/camera_models/include/: CataCamera.h  EquidistantCamera.h  ScaramuzzaCamera.h
camOdoCalib/src/camera_models/src/: PinholeCamera.cc
camOdoCalib/src/csm/: math_utils_gsl.cpp
camOdoCalib/src/data_selection/: data_selection.cpp
camOdoCalib/src/egsl/: egsl_conversions.cpp  egsl_ops.cpp
